Added options for tests (verify)