@@ -167,7 +167,6 @@
                     </execution>
                 </executions>
             </plugin>
-
             <!-- Post-jlink file copy -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -189,6 +188,32 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M7</version>
+                <configuration>
+                    <argLine>
+                        --add-opens=java.base/java.util=com.romiis.equallibtestapp
+                        --add-opens=java.base/java.lang=com.romiis.equallibtestapp
+                        --add-opens=java.base/java.security=com.romiis.equallibtestapp
+                        --add-opens=java.base/java.util.concurrent=com.romiis.equallibtestapp
+                        --add-opens=java.base/java.io=com.romiis.equallibtestapp
+                        --add-opens=java.base/jdk.internal.reflect=com.romiis.equallibtestapp
+                        --add-opens=java.base/java.lang.ref=com.romiis.equallibtestapp
+                        --add-opens=java.base/jdk.internal.misc=com.romiis.equallibtestapp
+                        --add-opens=java.base/java.util=EqualLib
+                        --add-opens=java.base/java.lang=EqualLib
+                        --add-opens=java.base/java.security=EqualLib
+                        --add-opens=java.base/java.util.concurrent=EqualLib
+                        --add-opens=java.base/java.io=EqualLib
+                        --add-opens=java.base/jdk.internal.reflect=EqualLib
+                        --add-opens=java.base/java.lang.ref=EqualLib
+                        --add-opens=java.base/jdk.internal.misc=EqualLib
+                    </argLine>
+                </configuration>
+            </plugin>
         </plugins>
+
     </build>
 </project>
